tests/baselines/reference/parser768531.errors.txt
tests/cases/conformance/parser/ecmascript5/Fuzz/parser768531.ts(1,2): error TS7028: Unused label.


==== tests/cases/conformance/parser/ecmascript5/Fuzz/parser768531.ts (1 errors) ====
    {a: 3}
     ~
!!! error TS7028: Unused label.
    /x/